# Projetos-de-Trainee-ROS2-

./: README.md
install/: local_setup.sh  setup.sh
install/publ_ass/lib/publ_ass/: listener  talker
install/publ_ass/share/publ_ass/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ser_cli/lib/ser_cli/: client  service
install/ser_cli/share/ser_cli/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
src/publ_ass/: setup.cfg  setup.py
src/publ_ass/publ_ass/: codigo_publicador.py
src/ser_cli/: package.xml  setup.cfg  setup.py
src/ser_cli/ser_cli/: codigo_cliente.py  codigo_servidor.py
